  [30843] potential use-after-free in getcanonname (CVE-2023-4806)
  [31183] Wide stream buffer size reduced MB_LEN_MAX bytes after bug 17522 fix
  [31184] FAIL: elf/tst-tlsgap
  [31185] Incorrect thread point access in _dl_tlsdesc_undefweak and _dl_tlsdesc_dynamic
  [31476] resolv: Track single-request fallback via _res._flags
  [31890] resolv: Allow short error responses to match any DNS query
  [31965] rseq extension mechanism does not work as intended
  [31968] mremap implementation in C does not handle arguments correctly
  [32052] Name space violation in fortify wrappers
  [32137] libio: Attempt wide backup free only for non-legacy code
  [32231] elf: Change ldconfig auxcache magic number
  [32470] x86: Avoid integer truncation with large cache sizes
  [32582] Fix underallocation of abort_msg_s struct (CVE-2025-0395)
  [32987] elf: Fix subprocess status handling for tst-dlopen-sgid
  [33185] Fix double-free after allocation failure in regcomp

Version 2.38

Major new features:

* When C2X features are enabled and the base argument is 0 or 2, the
  following functions support binary integers prefixed by 0b or 0B as
  input: strtol, strtoll, strtoul, strtoull, strtol_l, strtoll_l,
  strtoul_l, strtoull_l, strtoimax, strtoumax, strtoq, strtouq, wcstol,
  wcstoll, wcstoul, wcstoull, wcstol_l, wcstoll_l, wcstoul_l,
  wcstoull_l, wcstoimax, wcstoumax, wcstoq, wcstouq.  Similarly, the
  following functions support binary integers prefixed by 0b or 0B as
  input to the %i format: fscanf, scanf, sscanf, vscanf, vsscanf,
  vfscanf, fwscanf, wscanf, swscanf, vfwscanf, vwscanf, vswscanf; those
  functions also support the %b format for binary integers, with or
  without such a prefix and independent of standards mode.

* PRIb*, PRIB* and SCNb* macros from C2X have been added to
  <inttypes.h>.

* printf-family functions now support the wN format length modifiers for
  arguments of type intN_t, int_leastN_t, uintN_t or uint_leastN_t (for